# hastyplot

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  qplot.py  skills-lock.json
.github/workflows/: ci.yml
__marimo__/session/: qplot.py.json
scripts/: generate_docs.py
src/hastyplot/: __init__.py  qplot.py
src/qplot/: qplot.py
tests/: test_basic.py  test_import.py
